--- a/register/templates/register/home.html
+++ b/register/templates/register/home.html
@@ -59,7 +59,10 @@
                     <a class="nav-link" href="#countdown">UCPC</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#ucpc">Giải Thưởng</a>
+                    <a class="nav-link" href="#ucpc">Thể Lệ</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#rules">Giải Thưởng</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#reward">Lịch Trình</a>
@@ -167,38 +170,56 @@
         </div>
     </div>
 </div>
-
 <!-- Thời Gian Đăng Ký -->
-
 
 <!-- Thông Tin Cuộc Thi -->
 <section id="ucpc">
     <div class="container">
         <h1 style="font-weight: bold;">UCPC</h1>
-        <!-- <p>UCPC - UIT COLLEGIATE PROGRAMMING CONTEST, cuộc thi sẽ kế thừa hoàn toàn những giá trị truyền thống của 11
-            mùa UIT ACM trước đây. Bước đổi mới này nhằm khẳng định lại vai trò, vị trí cũng như xác định phương hướng
-            phát triển cho cuộc thi lập trình thuật toán danh giá nhất của UIT.</p>
-        <p>UCPC được tổ chức dựa trên format của cuộc thi lập trình thi đấu nổi tiếng thế giới ICPC, với mục đích khuyến
-            khích, đẩy mạnh phong trào học thuật, cũng như tạo ra sân chơi giữa sinh viên trường Đại học Công nghệ Thông
-            tin (ĐH CNTT) nói riêng và sinh viên, học sinh THPT có đam mê về lập trình thuật toán nói chung. Đây cũng là
-            cơ hội để các bạn tiếp cận, nâng cao khả năng của mình trong lĩnh vực lập trình thi đấu, giúp các bạn có thể
-            có những trải nghiệm trong môi trường lập trình thi đấu quốc tế. Đồng thời còn là dịp cho các doanh nghiệp
-            tiếp cận và ươm mầm nhân lực chất lượng cao. Để xem toàn bộ quy chế cuộc thi, vui lòng truy cập
-            <a style ="color:#68da23;" target="_blank" href="https://drive.google.com/file/d/18HSf-HGNfVJ7n-1VgzJE8dK432zxVYEm/view?fbclid=IwAR0MPHt7q4ICpRiT139EYRU_Grxo12-XEmBh1YGP9Bvv-M5oeLNy9QL5H3c">tại đây</a>.</p> -->
-            <p style="text-align: justify; margin-bottom: 10px;">
-                Trong tháng 05/2022 này, <b>Liên chi Hội khoa Khoa học Máy tính (LCH KHMT)</b> đã quyết định mang <b>UIT ACM (Cuộc thi lập trình thuật toán danh giá nhất của UIT)</b> trở lại với một cái tên cũng như diện mạo hoàn toàn mới đó là <b>UIT COLLEGIATE PROGRAMMING CONTEST (UCPC)</b>, cuộc thi sẽ kế thừa hoàn toàn những giá trị truyền thống của 11 mùa <b>UIT ACM</b> trước đây. Bước đổi mới này nhằm khẳng định lại vai trò, vị trí cũng như xác định phương hướng phát triển cho <b>Cuộc thi lập trình thuật toán danh giá nhất của UIT</b>.
-            </p>
-            <p style="text-align: justify; margin-bottom: 10px;">
-                <b>UCPC</b> được tổ chức dựa trên format của <b>Cuộc thi lập trình thi đấu nổi tiếng thế giới ICPC</b>, với mục đích khuyến khích, đẩy mạnh phong trào học thuật, cũng như tạo ra sân chơi giữa sinh viên trường <b>Đại học Công nghệ Thông tin (ĐH CNTT)</b> nói riêng và sinh viên các trường đại học, học sinh THPT có đam mê về lập trình thuật toán nói chung. Đây cũng là cơ hội để các bạn tiếp cận, nâng cao khả năng của mình trong lĩnh vực lập trình thi đấu, giúp các bạn có thể có những trải nghiệm trong môi trường lập trình thi đấu quốc tế. Đồng thời còn là dịp cho các doanh nghiệp tiếp cận và ươm mầm nhân lực chất lượng cao.
-            </p>
-            <p style="text-align: justify;">
-                Để xem toàn bộ quy chế cuộc thi, vui lòng truy cập
-                <a style ="color:#4CF2D2;" target="_blank" href="https://drive.google.com/file/d/1czbFm6z3LEVrgI92hJXqy7vdBInWSZE0/view?usp=sharing"><b>tại đây</b></a>.
-            </p>
+        <p style="text-align: justify; margin-bottom: 10px;">
+            Trong tháng 05/2022 này, <b>Liên chi Hội khoa Khoa học Máy tính (LCH KHMT)</b> đã quyết định mang <b>UIT ACM (Cuộc thi lập trình thuật toán danh giá nhất của UIT)</b> trở lại với một cái tên cũng như diện mạo hoàn toàn mới đó là <b>UIT COLLEGIATE PROGRAMMING CONTEST (UCPC)</b>, cuộc thi sẽ kế thừa hoàn toàn những giá trị truyền thống của 11 mùa <b>UIT ACM</b> trước đây. Bước đổi mới này nhằm khẳng định lại vai trò, vị trí cũng như xác định phương hướng phát triển cho <b>Cuộc thi lập trình thuật toán danh giá nhất của UIT</b>.
+        </p>
+        <p style="text-align: justify; margin-bottom: 10px;">
+            <b>UCPC</b> được tổ chức dựa trên format của <b>Cuộc thi lập trình thi đấu nổi tiếng thế giới ICPC</b>, với mục đích khuyến khích, đẩy mạnh phong trào học thuật, cũng như tạo ra sân chơi giữa sinh viên trường <b>Đại học Công nghệ Thông tin (ĐH CNTT)</b> nói riêng và sinh viên các trường đại học, học sinh THPT có đam mê về lập trình thuật toán nói chung. Đây cũng là cơ hội để các bạn tiếp cận, nâng cao khả năng của mình trong lĩnh vực lập trình thi đấu, giúp các bạn có thể có những trải nghiệm trong môi trường lập trình thi đấu quốc tế. Đồng thời còn là dịp cho các doanh nghiệp tiếp cận và ươm mầm nhân lực chất lượng cao.
+        </p>
     </div>
 </section>
 <!-- Thông Tin Cuộc Thi -->
 
+<!-- Thể lệ cuộc thi -->
+<section id="rules">
+    <div class="container" style="padding: 40px 15px;">
+        <h1 style="font-weight: bold;">Thể lệ cuộc thi</h1>
+        <div class="participants row" style=" color: white; text-align: justify; margin-bottom: 20px;">
+            <div class="col-sm-3 col-12" style="text-align: left;">
+                <p style="font-size: 25px; font-weight:bold; color: white; margin-bottom: 10px;">Đối tượng:</p>
+            </div>
+            <div class="col-sm-9 col-12">
+                <p style="font-size: 16px; text-align: justify; color: white; margin-bottom: 10px;">Tất cả sinh viên trường Đại học Công nghệ Thông tin, cùng các sinh viên đến từ các trường Đại học khác, các bạn học sinh Trung học phổ thông có yêu thích và muốn thử sức với phong cách thi lập trình sinh viên quốc tế.</p>
+                <p style="font-size: 16px; text-align: justify; color: white; margin-bottom: 10px;">Thí sinh đăng ký theo đội (mỗi đội gồm 3 thành viên).</p>
+                <p style="font-size: 16px; text-align: justify; color: white; margin-bottom: 10px;">Độ tuổi: 15 – 23 tuổi (tính đến ngày diễn ra cuộc thi).</p>
+            </div>
+        </div>
+        <div class="registration_format row" style=" color: white; text-align: justify; margin-bottom: 20px;">
+            <div class="col-sm-3 col-12" style="text-align: left;">
+                <p style="font-size: 25px; font-weight:bold; color: white; margin-bottom: 10px;">Hình thức đăng ký:</p>
+            </div>
+            <div class="col-sm-9 col-12">
+                <p style="font-size: 16px; text-align: justify; color: white; margin-bottom: 10px;">Các sinh viên đăng ký thông tin tham dự thông qua <a target="_blank" style ="color:#4CF2D2;" href="https://ucpc.uit.edu.vn/register/"><b>trang web cuộc thi</b></a>, đối với học sinh THPT yêu cầu có HLV và đăng ký qua <a target="_blank" style ="color:#4CF2D2;" href="mailto:ucpc@uit.edu.vn"><b>email của ban tổ chức</b></a>.</p>
+                <p style="font-size: 16px; text-align: justify; color: white; margin-bottom: 10px;">Các đội sau khi đăng ký dự thi có nhu cầu thay đổi thông tin tham dự hoặc có bất kỳ vấn đề nào liên quan tới tài khoản đăng ký dự thi vui lòng gửi mail về <a target="_blank" style ="color:#4CF2D2;" href="mailto:ucpc@uit.edu.vn"><b>email của ban tổ chức</b></a>.</p>
+            </div>
+        </div>
+        <div class="regulation row" style=" color: white; text-align: justify;">
+            <div class="col-sm-3 col-12" style="text-align: left;">
+                <p style="font-size: 25px; font-weight:bold; color: white; margin-bottom: 10px;">Quy định cuộc thi:</p>
+            </div>
+            <div class="col-sm-9 col-12">
+                <p style="font-size: 16px; text-align: justify; color: white; margin-bottom: 10px;">Để xem toàn bộ quy định cuộc thi, vui lòng truy cập <a style ="color:#4CF2D2; font-size: 20px;" target="_blank" href="https://drive.google.com/file/d/1czbFm6z3LEVrgI92hJXqy7vdBInWSZE0/view?usp=sharing"><b>TẠI ĐÂY</b></a>.</p>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Thể lệ cuộc thi -->
 
 <!-- Thông Tin giải thưởng -->
 
@@ -303,101 +324,103 @@
 <!-- Lịch trình -->
 
 <!-- Giới thiệu ban tổ chức -->
-<!-- <div id="organizers" class="container-fluid">
+<div id="organizers" class="container-fluid">
     <div class="container">
-        <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
-            <h5>ĐƠN VỊ TỔ CHỨC</h5>
-            <div class="unit_logo">
-                <div class="row">
-             huhu           <div class="unit">
-                            <img class="UIT" src="{% static 'register/images/footer/UIT_white.png' %}">
+        <h5>ĐƠN VỊ TỔ CHỨC</h5>
+        <div class="unit_logo">
+            <div class="row">
+                <div class="col-lg-3 col-md-3 col-sm-3 col-3">
+                    <div class="unit">
+                        <a target="_blank" href="http://www.uit.edu.vn/" rel="noopener noreferrer"><img class="UIT" src="{% static 'register/images/footer/UIT.png' %}"></a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-3 col-3">
+                    <div class="unit">
+                        <a href="http://facebook.com/tuoitre.uit" target="_blank" rel="noopener noreferrer"><img class="HSV" src="{% static 'register/images/footer/HSV.png' %}"></a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-3 col-3">
+                    <div class="unit">
+                        <a href="http://cs.uit.edu.vn" target="_blank" rel="noopener noreferrer"><img class="CS" src="{% static 'register/images/footer/CS.png' %}"></a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-3 col-3">
+                    <div class="unit">
+                        <a href="http://www.facebook.com/uit.ucpc" target="_blank" rel="noopener noreferrer"><img class="UCPC" src="{% static 'register/images/footer/UCPC.png' %}"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Giới thiệu ban tổ chức -->
+
+<!-- Giới thiệu nhà tài trợ -->
+<div id="sponsors" class="container-fluid">
+    <div class="container">
+        <div class="row" style="padding-bottom: 30px;">
+            <div class="col-lg-8 col-md-8 col-sm-12 col-12">
+                <div class="gold_sponsor">
+                    <h5>ĐƠN VỊ TÀI TRỢ VÀNG</h5>
+                    <div class="unit_logo">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-4 col-sm-4 col-4">
+                                <div class="unit">
+                                    <a href="http://www.tma.vn" target="_blank" rel="noopener noreferrer"><img class="TMA" src="{% static 'register/images/sponsors/TMA.png' %}"></a>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-4 col-sm-4 col-4">
+                                <div class="unit">
+                                    <a href="http://citynow.vn/" target="_blank" rel="noopener noreferrer"><img class="Citynow" src="{% static 'register/images/sponsors/Citynow.png' %}"></a>
+                                </div>
+                                <div class="unit">
+                                    <a href="http://www.autonomous.ai/" target="_blank" rel="noopener noreferrer"><img class="Autonomous" src="{% static 'register/images/sponsors/Autonomous.png' %}"></a>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-4 col-sm-4 col-4">
+                                <div class="unit">
+                                    <a href="https://www.mckinsey.com/vn/overview" target="_blank" rel="noopener noreferrer"><img class="McKinsey" src="{% static 'register/images/sponsors/McKinsey.png' %}"></a>
+                                </div>
+                                <div class="unit">
+                                    <a href="https://gianty.com.vn/vi/company" target="_blank" rel="noopener noreferrer"><img class="Gianty" src="{% static 'register/images/sponsors/Gianty.png' %}"></a>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-4">
-                        <div class="unit">
-                            <img class="HSV" src="{% static 'register/images/footer/Hoi_white.png' %}">
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-4">
-                        <div class="unit">
-                            <img class="CS" src="{% static 'register/images/footer/CS_white.png' %}">
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-12 col-12 silver">
+                <div class="silver_sponsor">
+                    <h5>ĐƠN VỊ TÀI TRỢ BẠC</h5>
+                    <div class="unit_logo">
+                        <div class="unit" style="text-align: center; align-items: center;">
+                            <img class="sun_studio" src="{% static 'register/images/sponsors/Sun-studio.png' %}">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
-        <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12"></div>
-
-        <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12"></div>
     </div>
-</div> -->
-<!-- Giới thiệu ban tổ chức -->
+</div>
+<!-- Giới thiệu nhà tài trợ -->
 
 <!-- footer -->
 <footer>
     <div id="footer" class="container-fluid">
         <div class="container">
             <div class="row">
-                <!-- <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
-                    <div class="sponsor">
-                        <h5>ĐƠN VỊ TÀI TRỢ</h5>
-                        <div class="unit_logo">
-                            <div class="row">
-                                <div class="col-lg-4 col-md-4 col-sm-4 col-4">
-                                    <div class="unit">
-                                        <img class="sponsor_1" src="{% static 'register/images/footer/CS_white.png' %}">
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-sm-4 col-4">
-                                    <div class="unit">
-                                        <img class="sponsor_2" src="{% static 'register/images/footer/CS_white.png' %}">
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-sm-4 col-4">
-                                    <div class="unit">
-                                        <img class="sponsor_3" src="{% static 'register/images/footer/CS_white.png' %}">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
-
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                    <div class="organizers">
-                        <h5>ĐƠN VỊ TỔ CHỨC</h5>
-                        <div class="unit_logo">
-                            <div class="row">
-                                <div class="col-lg-4 col-md-4 col-sm-4 col-4">
-                                    <div class="unit">
-                                        <img class="UIT" src="{% static 'register/images/footer/UIT.png' %}">
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-sm-4 col-4">
-                                    <div class="unit">
-                                        <img class="HSV" src="{% static 'register/images/footer/HSV.png' %}">
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-sm-4 col-4">
-                                    <div class="unit">
-                                        <img class="CS" src="{% static 'register/images/footer/CS.png' %}">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
    
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-6">
                     <h5>ĐƠN VỊ HỖ TRỢ</h5>
                     <div style="text-align: center; align-items: center;">
-                        <img style ="width: 24%;" src="{% static 'register/images/footer/Doan.png' %}" alt="">
+                        <div class="support">
+                            <img src="{% static 'register/images/footer/Doan.png' %}" alt="">
+                        </div>
                     </div>
                 </div>
                 
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                    <h5>LIÊN HỆ</h5>
+                <div class="col-lg-6 col-md-6 col-sm-6 col-6">
+                    <h5 style="padding-left: 20px;">LIÊN HỆ</h5>
                     <div class="contact" style="margin-top: 46px;">
                         <div class="row">
                             <div class="col-lg-6 col-md-6 col-sm-6 col-6">
