--- a/register/templates/register/home.html
+++ b/register/templates/register/home.html
@@ -325,31 +325,49 @@
 
 <!-- Giới thiệu ban tổ chức -->
 <div id="organizers" class="container-fluid">
-    <div class="container">
-        <h5>ĐƠN VỊ TỔ CHỨC</h5>
-        <div class="unit_logo">
-            <div class="row">
-                <div class="col-lg-3 col-md-3 col-sm-3 col-3">
-                    <div class="unit">
-                        <a target="_blank" href="http://www.uit.edu.vn/" rel="noopener noreferrer"><img class="UIT" src="{% static 'register/images/footer/UIT.png' %}"></a>
-                    </div>
+    <div class="container">   
+        <div class="row" style="padding-bottom: 30px;">
+
+            <div class="col-lg-3 col-md-3 col-sm-12 col-12">
+                <div>
+
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-3 col-3">
-                    <div class="unit">
-                        <a href="http://facebook.com/tuoitre.uit" target="_blank" rel="noopener noreferrer"><img class="HSV" src="{% static 'register/images/footer/HSV.png' %}"></a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-3 col-3">
-                    <div class="unit">
-                        <a href="http://cs.uit.edu.vn" target="_blank" rel="noopener noreferrer"><img class="CS" src="{% static 'register/images/footer/CS.png' %}"></a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-3 col-3">
-                    <div class="unit">
-                        <a href="http://www.facebook.com/uit.ucpc" target="_blank" rel="noopener noreferrer"><img class="UCPC" src="{% static 'register/images/footer/UCPC.png' %}"></a>
+            </div>
+
+            <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+                <h5>ĐƠN VỊ TỔ CHỨC</h5>
+                <div class="unit_logo"> 
+                    <div class="row">
+                        <div class="col-lg-3 col-md-3 col-sm-3 col-3">
+                            <div class="unit">
+                                <a target="_blank" href="http://www.uit.edu.vn/" rel="noopener noreferrer"><img class="UIT" src="{% static 'register/images/footer/UIT.png' %}"></a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-3 col-sm-3 col-3">
+                            <div class="unit">
+                                <a href="http://facebook.com/tuoitre.uit" target="_blank" rel="noopener noreferrer"><img class="HSV" src="{% static 'register/images/footer/HSV.png' %}"></a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-3 col-sm-3 col-3">
+                            <div class="unit">
+                                <a href="http://cs.uit.edu.vn" target="_blank" rel="noopener noreferrer"><img class="CS" src="{% static 'register/images/footer/CS.png' %}"></a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-3 col-sm-3 col-3">
+                            <div class="unit">
+                                <a href="http://www.facebook.com/uit.ucpc" target="_blank" rel="noopener noreferrer"><img class="UCPC" src="{% static 'register/images/footer/UCPC.png' %}"></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
+
+            <div class="col-lg-3 col-md-3 col-sm-12 col-12">
+                <div>
+                    
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
